# sradg-echo-anomaly

code/: README.md  pyproject.toml
code/data/: bank_statement.csv  financial_recons_data_10000.csv  financial_recons_data_10k.csv
code/src/: anomalies_explained.csv  app.py  config.properties  service.py  utils.py
code/src/data/: .~lock.daily.csv#  .~lock.history.csv#  d_1_month.ods  daily.csv.bk  data_genration.py  financial_recons_2025_01.csv  financial_recons_2025_03.csv  financial_recons_data.csv  financial_recons_data_5000_updated.csv  history.csv.bk  internal_records.csv
code/src/output/: .~lock.anomalies_c7dfacb8-2334-4999-ae97-5d6dde4cf823.csv#  .~lock.corrected_8c441865-550c-447f-862c-ffe75eef0fd5.csv#  .~lock.corrected_c7dfacb8-2334-4999-ae97-5d6dde4cf823.csv#  .~lock.corrected_da863cee-1f2f-4228-9904-aed83392f6aa.csv#  .~lock.corrected_ebdb1723-c0c6-4038-bebb-4efcfea27299.csv#  Anamoly Output Synopsis.txt  anomalies_b44a1d2c-76a6-4f44-aba7-229a88a51855.csv  anomalies_c07f5900-ac9f-4983-83de-e3b20b36486b.csv  anomalies_c7dfacb8-2334-4999-ae97-5d6dde4cf823.csv  anomalies_ebdb1723-c0c6-4038-bebb-4efcfea27299.csv  corrected_b44a1d2c-76a6-4f44-aba7-229a88a51855.csv  corrected_c07f5900-ac9f-4983-83de-e3b20b36486b.csv
code/test/: test_app.py
output/: anomalies_explained.csv
